feat(EcPay): merge project

--- a/Maus.Test/Maus.Test.csproj
+++ b/Maus.Test/Maus.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Maus.Domain\Maus.Domain.csproj" />
+    <ProjectReference Include="..\Maus.Server\Maus.Server.csproj" />
   </ItemGroup>
 
 </Project>
