feat(EcPay): add dependent cs to cshtml

--- a/Maus.Server/Maus.Server.csproj
+++ b/Maus.Server/Maus.Server.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Views\Shared\FormSubmitDirectly.cs">
+      <DependentUpon>FormSubmitDirectly.cshtml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
