feat(EcPay): rename project name

--- a/Maus.Test/Maus.Test.csproj
+++ b/Maus.Test/Maus.Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Maus.Server\Maus.Server.csproj" />
+    <ProjectReference Include="..\Maus.Web\Maus.Web.csproj" />
   </ItemGroup>
 
 </Project>
