--- a/Maus.Infrastructure/Maus.Infrastructure.csproj
+++ b/Maus.Infrastructure/Maus.Infrastructure.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Maus.Domain\Maus.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    </ItemGroup>
+
 </Project>
